# lstore-jerasure

./: CHANGELOG.md  CMakeLists.txt
.pc/: applied-patches
.pc/merge-with-git-version/: jerasure.h
.pc/merge-with-git-version/Examples/: cauchy_02.c  cauchy_04.c  decoder.c  encoder.c  jerasure_05.c  jerasure_07.c  jerasure_08.c  liberation_01.c  reed_sol_01.c  reed_sol_03.c  reed_sol_04.c
debian/: README.Debian  README.source  changelog  control  copyright  docs  init.d.ex  jerasure.cron.d.ex  jerasure.default.ex  jerasure.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
debian/patches/: ACCRE-combined-1  merge-with-git-version  series
debian/source/: include-binaries  options
src/: CMakeLists.txt  galois.c  jerasure.h
